tests/bad/frontend/wrongMainFunctionType.latte
//   void main() {}


int main(int x) {
    return 0;
}